<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThePiProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="start_game">Start New Game</string>
    <string name="choose_category">Choose Category</string>
    <string name="language">Bulgarian</string>
    <string name="memory">Memory</string>
    <string name="logic">Logic</string>
    <string name="speed">Speed</string>
    <string name="title_activity_logic">LogicActivity</string>
    <string name="score">Score: </string>
    <string name="title_activity_logic_activity_2">LogicActivity_2</string>
    <string name="title_activity_logic_activity2">LogicActivity2</string>
    <string name="title_activity_logic2">Logic2</string>
    <string name="title_activity_logic_main">LogicMain</string>
    <string name="title_activity_game_speed_1">GameSpeed_1</string>
    <string name="title_activity_game_speed1">GameSpeed1</string>
    <string name="title_activity_game_speed2">GameSpeed2</string>
    <string name="title_activity_game_speed5">GameSpeed5</string>
    <string name="title_activity_game_speed10">GameSpeed10</string>
    <string name="title_activity_numbers_example">NumbersExample</string>
    <string name="title_activity_logic_final">LogicFinalActivity</string>
    <string name="speed_next_button">Aswer and go to next -></string>
    <string name="speed_game_1"> Calculate task !</string>
    <string name="speed_game_5"> Sqrt number:</string>
    <string name="speed_game_10"> Remove ticks</string>
    <string name="title_activity_all_games">AllGames</string>
    <string name="title_activity_memory">MemoryActivity</string>
    <string name="title_activity_memory_game1">MemoryGame1</string>
    <string name="title_activity_memory_game2">MemoryGame2</string>
    <string name="title_activity_memory_game3">MemoryGame3</string>
    <string name="title_activity_memory_game4">MemoryGame4</string>
    <string name="game4_current_color">Current color</string>
    <string name="number_sequence_example">Number Seqence</string>
    <string name="sequence_goal">Goal of the game is to enter the next number from the sequence</string>
    <string name="example">Example:</string>
    <string name="sequence_answer">Answer: 21</string>
    <string name="sequence_solution">Solution: </string>
    <string name="sequence_enter_answer">Enter Answer</string>
    <string name="finish_the_pic_goal">Goal of the game is to choose the part that best completes the series in the picture</string>
    <string name="finish_the_pic_example">Finish the picture</string>
    <string name="answer">Answer: </string>
    <string name="origami_example">Fold the paper</string>
    <string name="origami_goal">Goal of the game is to choose how the unfolded paper will look like when folded where the solid lines are</string>
    <string name="category_choose">Choose what to train</string>
    <string name="game_over">GAME OVER</string>
    <string name="max_speed_min_logic">You have awesome speed skills, however you are awfull at logic.</string>
    <string name="max_speed_min_memory">You have awesome speed skills, however your memory skills are &quot;limited&quot;.</string>
    <string name="max_logic_min_speed">You have great logic skills, but you are bad speed games.</string>
    <string name="max_logic_min_memory">You have great logic skills, however your memory skills are &quot;limited&quot;.</string>
    <string name="max_memory_min_logic">You have great memory, but you lack in logic skills.</string>
    <string name="max_memory_min_speed">You have great memory, but u have poor speed.</string>
    <string name="train">Train your:</string>
    <string name="add_player">Add Player</string>
    <string name="solve_the_expresion"> Solve the expression</string>
    <string name="find_sqrt">Find the square number</string>
    <string name="remove_tick_title">Remove the ticks</string>
    <string name="remove_tick">Remove all ticks withouth touching the red sing</string>
    <string name="choose_player">Choose player</string>
    <string name="color_title">Color the blocks</string>
    <string name="color_goal">Remembert the color of blocks and colore them</string>
    <string name="whats_missing_title">What is missing</string>
    <string name="whats_missing_goal"> Remember the pictures and find out what is missing </string>
    <string name="keys_title"> Missing keys</string>
    <string name="keys_goal"> Keys will be apear after few seconds. Remember all keys and click on new one.</string>

</resources>