<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundmain"
    tools:context="com.example.thepiproject.MainActivity" >

    <ImageButton
        android:id="@+id/soundButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:contentDescription="Turn Sound On/Off"
        android:src="@drawable/icon_on" />

    <Button
        android:id="@+id/randomGameButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_dark"
        android:text="@string/start_game"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/categoryButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_light"
        android:text="@string/choose_category" />

    <Button
        android:id="@+id/languageButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/language"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/playerButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="680dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/choose_player"
        android:textColor="@android:color/white" />

</RelativeLayout>
