<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="650dp"
    android:background="#062b76" >
    

    <TextView
        android:id="@+id/exampleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/origami_example"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    
     <TextView
        android:id="@+id/exampleGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/origami_goal"
        android:textColor="@android:color/white"
        android:textSize="27sp" />
     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/example"
        android:textColor="@android:color/white"
        android:textSize="27sp" />
     
      <ImageButton
        android:id="@+id/buttonExampleResult"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="400dp"
        android:layout_marginTop="550dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/next" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="555dp"
        android:layout_marginLeft="80dp"
        android:gravity="center"
        android:text="@string/answer"
        android:textColor="@android:color/white"
        android:textSize="27sp" />

    <ImageView 
        android:layout_height="250dp"
        android:layout_width="350dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/s2" 
        android:background="@android:color/transparent"/>
    
    <ImageView 
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginTop="525dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/s2a" 
        android:background="@android:color/transparent"/>
    
</RelativeLayout>
