<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bkackground_category"
    tools:context="com.example.thepiproject.CategoryActivity" >

    <ImageButton
        android:id="@+id/soundButtonCategoryActivity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="Turn Sound On/Off"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_on" />

    <Button
        android:id="@+id/categoryMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categoryLogic"
        android:layout_below="@+id/categoryLogic"
        android:layout_marginTop="106dp"
        android:text="@string/memory" />

    <Button
        android:id="@+id/categoryLogic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categorySpeed"
        android:layout_below="@+id/categorySpeed"
        android:layout_marginTop="99dp"
        android:text="@string/logic" />

    <Button
        android:id="@+id/categorySpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/soundButtonCategoryActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:text="@string/speed" />
    
</RelativeLayout>
